2002-07-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: fixed --buildmap

2002-07-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* autogen.sh: fixed problem when automake was compiled with aclocal
	data directory /usr/local/share/aclocal

2002-07-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: implemented "x's ashes" name in SI
	* font.cc: fixed word wrapping off-by-hlead

2002-07-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: last commit seems to have gone wrong... should be ok now

2002-07-02  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc,chunks.{cc,h},egg.{cc,h},ucsched.cc:  Have initial
	eggs execute immediately.  Fixed Avatar appearance at start of SI.

2002-07-02  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: fixes to SI item names (thanks sb-x)

2002-07-01  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: even more item names for SI

2002-07-01  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: more item names for SI

2002-06-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: finally fixed 'blood' names

2002-06-24  Ryan Nunn  <triforce@merlin.net.au>
	* ChangeLog : Removed comment that was meant for the other branch

2002-06-24  Ryan Nunn  <triforce@merlin.net.au>
	* actors.cc : Fixed a problem with gloves not using both fingers in BG.
	* actors.cc, gumps/Gump_manager.cc : Fixed a problem where using a
	  Female avatar in BG with ye olde style inventories would stop the 'I'
	  key from working
	* actors.h, gumps/Actor_gump.cc : Blue lines are now removed when two
	  handed or two fingered item equiped in BG with ye olde style
	  inventories

2002-06-22  Ryan Nunn  <triforce@merlin.net.au>
	* actors.cc : Fixed a problem when reusing a variable name. Using the
	  other variable with the same name and an initializer of the new one
	  is a bad idea.
